@@ -19,6 +19,8 @@ Version 1.6+svn:
 
   * Miscellaneous and bugfixes:
     * Fix a lock-up issue when no music could be played.
+    * Limit the maximum length of the mp command dialog as workaround for
+      a 'crash'. (Windows and Mac only.)
 
 Version 1.6:
   * Graphics:
