@@ -32,6 +32,8 @@ Version 1.6+svn:
      (impacts "submerge" animations and AI settings)
    * Fixed a bug with auto-stored WML variables not being restored correctly
    * Fixed a crash when sighted event killed the attacked unit
+   * Limit the maximum length of the mp command dialog as workaround for bug
+     #13333 (This workaround is only implemented for Windows and Mac)
 
 Version 1.6a:
  * User interface:
