@@ -13,7 +13,10 @@ The release team should empty this file after each release.
 
 ***
 
-REPLACE ME WITH CONTENT...
+On Windows and Mac a log text in the mp command dialog could give an error
+which threw players out the lobby. This problem seems to be an upstream problem
+and is being further investigated. As workaround the length of the input is
+limited to a save length. (The chatline is not affected.)
 
 ***
 
